--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.16.3",
+    "bcryptjs": "^3.0.3",
     "dayjs": "^1.11.18",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -37,6 +38,7 @@
     "@nestjs/testing": "^10.0.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@swc/core": "^1.13.5",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@vitest/coverage-v8": "^3.2.4",
