--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^6.16.3",
     "bcryptjs": "^3.0.3",
     "dayjs": "^1.11.18",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^4.1.11"
@@ -43,6 +44,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "8.47.0",
     "prisma": "^6.16.3",
