--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
+    "dotenv": "^17.2.3",
     "eslint": "8.47.0",
     "prisma": "^6.16.3",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
