--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@swc/core": "^1.13.5",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.17",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
