test: add questio repository test e2e

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./data/pg:/data/postgres
 
   cache:
-    container_name: nest-clea-cache
+    container_name: nest-clean-cache
     image: redis
     ports:
       - 6379:6379
